--- a/rtsp-client/src/main/res/layout/activity_main.xml
+++ b/rtsp-client/src/main/res/layout/activity_main.xml
@@ -51,20 +51,20 @@
             />
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="340dp"
-        android:layout_height="340dp"
-        android:background="#a12a12"
-        android:gravity="center">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/purple_200"
+        android:orientation="vertical">
 
-        <VideoView
+        <com.example.rtsp.client.CustomVideoView
             android:id="@+id/video_view"
-            android:layout_width="320dp"
-            android:layout_height="160dp"
-
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
             />
 
-    </LinearLayout>
-
+    </RelativeLayout>
 
 </LinearLayout>
