政策显示本地html

--- a/mymgstudyapp/src/main/res/layout/activity_main.xml
+++ b/mymgstudyapp/src/main/res/layout/activity_main.xml
@@ -14,4 +14,11 @@
         android:textAllCaps="false"
         android:onClick="onClickOpenLocalNetScanPage"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="WebView测试"
+        android:textAllCaps="false"
+        android:onClick="onClickOpenWebViewTestPage"/>
+
 </LinearLayout>
