--- a/app/src/main/res/layout/activity_animation_demo.xml
+++ b/app/src/main/res/layout/activity_animation_demo.xml
@@ -56,5 +56,24 @@
             android:layout_centerInParent="true"
             />
     </RelativeLayout>
+    <LinearLayout
+        android:id="@+id/layout_beat_mouse"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:text="开始旋转动画"
+            android:onClick="btnOnClickBeatMouseGraph"/>
+
+<!--        <com.android.study.example.uidemo.animation.BeatMouseAnimView-->
+<!--            android:id="@+id/iv_beat_mouse_graph"-->
+<!--            android:layout_width="190dp"-->
+<!--            android:layout_height="190dp"-->
+<!--            android:layout_marginLeft="50dp"/>-->
+
+    </LinearLayout>
 
 </LinearLayout>
