--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,13 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="自定义状态栏测试"
+            android:textSize="14sp"
+            android:textAllCaps="false"
+            android:onClick="openCustomStatusBarActivity"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="视频 测试"
             android:textSize="14sp"
             android:textAllCaps="false"
